# zephyr_3d_game_template2

./: CMakeLists.txt  Kconfig  README.md  cat_house.webm.mov  prj.conf  west.yml
boards/: ai_m62_32s.conf  ai_m62_32s.overlay  native_sim.conf  native_sim.overlay  promicro_nrf52840_nrf52840_uf2.conf  promicro_nrf52840_nrf52840_uf2.overlay  rpi_pico.overlay
data/: LV_Z_BUFFER_3.ods
demo/: Kconfig  prj.conf
editor/: CMakeLists.txt  Kconfig  generate_objects.py  generate_static.py  prj.conf
editor/boards/: native_sim.conf  native_sim.overlay
editor/data/: building.col  building_.json  capsule_.json  cat.json  cube.col  cube_.json  plane.col  plane_x.col  plane_x.json  plane_y.json  plane_z.col  plane_z.json  sphere.col  sphere_.json
editor/data/nocol/: building.mtl  building_.json
editor/data/nocol/primitives/: cube_.json  plane_x.json  plane_y.json  plane_z.json  sphere_.json
editor/data/primitives/: capsule.col  capsule_.json  cube.col  cube_.json  plane_x.json  plane_y.col  plane_y.json  plane_z.json  sphere_.json
editor/include/: building.h  cat.h  editor.h  wood.h
editor/src/: editor_UI.c  editor_render.c  main.c  serialize.c
freecam/: CMakeLists.txt  prj.conf
freecam_headless/: prj.conf
include/: L3.h  building.h  cat.h  cube.h  default_scene.h  engine.h  filters.h  flame.h  logo_scene.h  plane.h  serialize.h  utility.h
lib/: CMakeLists.txt  Kconfig  L3.c  L3.h  engine.c  engine.h  small3dlib.h  tools.h
src/: demo.h  main.c
tools/: demo_terrain.h  generate_lightable.py  generate_sintable.py  generate_test_heightmap.py  mul8_light_table.h  (+4 more)
(+375 files in other folders)
